<resources>
    <string name="app_name">App</string>
    <string name="titulo">App</string>
    <string name="conectar">Conectar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="desconectar">Desconectar</string>
    <string name="imagen">Imagen</string>
    <string name="estado">Estado</string>
    <string name="direccionIP">Dirección IP</string>
    <string name="puerto">Puerto</string>
    <string name="conectados">Conectados</string>
    <string name="log">Log :</string>
    <string name="conexion">Conexión</string>
    <string name="carta">Carta Platos</string>
    <string name="entrar">Entrar</string>
    <string name="categorias">Categorías</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoría</string>
    <string name="precio">Precio</string>
    <string name="mostrar_todos">Mostrar todos</string>
    <string name="añadir_plato">Añadir plato</string>
    <string name="borrar_plato">Borrar plato</string>
    <string name="nombre_plato">Nombre plato</string>
    <string name="mesa">Mesa</string>
    <string name="title_activity_lista__pedidos">Lista de pedidos</string>
    <string name="cobrado">Cobrado</string>
    <string name="comensales">Comensales</string>
    <string name="notas">Notas</string>
    <string name="archivar">Archivar</string>
    <string name="pedir_cuenta">Pedir Cuenta</string>
    <string name="title_activity_detalles_pedido">Detalles pedido</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_abrev">Cant.</string>
    <string name="total">Total</string>
    <string name="aceptar">Aceptar</string>
</resources>
