<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detalles_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="brdebr.bryan.app_bar.Activities.Detalles_Pedido"
    tools:showIn="@layout/activity_detalles_pedido">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="6dp"
        android:id="@+id/linear_layout_cabecera_detalles_pedido">

        <TextView
            android:text="@string/nombre_plato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_cabecera_nombre_plato_item_lista_detalles_pedido"
            android:layout_weight="8"
            android:paddingStart="4dp" />

        <TextView
            android:text="@string/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_cabecera_precio_plato_item_lista_detalles_pedido"
            android:layout_weight="2"
            android:textAlignment="center" />

        <TextView
            android:text="@string/cantidad_abrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_cabecera_cantidad_plato_item_lista_detalles_pedido"
            android:layout_weight="3"
            android:textAlignment="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->
        <!--DECRAPTED-->

        <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_cabecera_total_plato_item_lista_detalles_pedido"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:paddingEnd="10dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="29dp"
        android:id="@+id/recycler_detalles_pedido"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>
