<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/estado"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:labelFor="@+id/edit_estado_conexion" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/direccionIP"
                android:labelFor="@+id/edit_direccion_conexion" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/puerto"
                android:labelFor="@+id/edit_puerto_conexion" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/conectados"
                android:labelFor="@+id/edit_conectados_conexion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_estado_conexion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:layout_weight="1"
                android:background="@drawable/caja_textos_gradiente"
                android:focusable="false"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/holo_green_light"
                android:textCursorDrawable="@drawable/cursor_azul"
                android:text="Desconectado"
                tools:ignore="HardcodedText"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_direccion_conexion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/caja_texto_cuadrada"
                android:gravity="center_vertical"
                android:maxLength="15"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/holo_green_light"
                android:textCursorDrawable="@drawable/cursor_azul"
                android:maxLines="1"
                android:inputType="text"
                tools:text="10.0.2.22" />

            <EditText
                android:id="@+id/edit_puerto_conexion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/caja_texto_cuadrada"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/holo_green_light"
                android:textCursorDrawable="@drawable/cursor_azul"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_conectados_conexion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@drawable/caja_textos_gradiente"
                android:focusable="false"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLength="5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/holo_green_light"
                android:textCursorDrawable="@drawable/cursor_azul"
                android:text="00/20"
                tools:ignore="HardcodedText"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/linear_layout_02">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/log"
                android:labelFor="@+id/edit_log_conexion"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/edit_log_conexion"
                android:layout_width="match_parent"
                android:background="@drawable/caja_texto_cuadrada"
                android:focusable="false"
                android:gravity="top"
                android:inputType="textNoSuggestions|none|textMultiLine"
                android:paddingLeft="5dp"
                android:scrollbars="vertical"
                android:textCursorDrawable="@drawable/cursor_azul"
                android:textSize="15sp"
                android:paddingRight="5dp"
                android:clickable="false"
                app:layout_heightPercent="55%"
                android:layout_below="@+id/textView5"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edit_usuario_conexion"
                app:layout_widthPercent="45%"
                android:hint="@string/usuario"
                android:layout_below="@id/edit_log_conexion"
                android:maxLines="1"
                android:inputType="textCapSentences"
                android:layout_marginBottom="5dp"
                tools:text="Bryan" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="10%"
                app:layout_heightPercent="10%"
                android:layout_toEndOf="@+id/edit_usuario_conexion"
                android:layout_alignTop="@id/edit_usuario_conexion"
                android:id="@+id/space_main_02" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/edit_contraseña_conexion"
                app:layout_widthPercent="45%"
                android:hint="@string/contraseña"
                android:text="asdzxc"
                android:maxLines="1"
                android:layout_below="@id/edit_log_conexion"
                android:layout_toEndOf="@id/space_main_02"
                android:layout_marginBottom="5dp" />

            <Button
                android:text="@string/desconectar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_desconectar_conexion"
                app:layout_widthPercent="45%"
                android:layout_below="@id/edit_usuario_conexion"
                android:maxLines="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="10%"
                app:layout_heightPercent="10%"
                android:layout_toEndOf="@+id/btn_desconectar_conexion"
                android:layout_alignTop="@id/btn_desconectar_conexion"
                android:id="@+id/space_main_03" />

            <Button
                android:text="@string/conectar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="45%"
                android:id="@+id/btn_conectar_conexion"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/space_main_03"
                android:layout_below="@+id/edit_contraseña_conexion"
                android:clickable="false"

                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1" />

        </android.support.percent.PercentRelativeLayout>

    </LinearLayout>

</LinearLayout>
