<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="brdebr.bryan.app_bar.Auxiliares.MoveUpwardBehavior"
        tools:context=".Activities.Detalles_Plato">

        <EditText
            android:id="@+id/txt_nombre_plato_anadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nombre_plato"
            android:maxLength="30"
            android:maxLines="2"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_plato_detalles_anadir"
                android:layout_width="260dp"
                android:layout_height="170dp"
                android:background="@drawable/caja_imagen_detalles_platos"
                android:paddingBottom="12dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_editar_imagen_plato"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@id/img_plato_detalles_anadir"
                android:layout_alignEnd="@id/img_plato_detalles_anadir"
                android:padding="4dp"
                app:srcCompat="@drawable/edit64"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="15"
            android:background="@drawable/caja_texto_datos_detalles_plato"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_descripcion_plato_anadir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:hint="@string/descripcion"
                    android:inputType="textMultiLine"
                    android:lines="9"
                    android:maxLength="350"
                    android:maxLines="15"
                    android:minLines="9"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/categoria"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layout_container_categoria_anadir_plato"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/caja_texto_redonda_categoria_detalles"
                    android:orientation="horizontal"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp">

                    <ImageView
                        android:id="@+id/img_categoria_detalles_anadir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|clip_horizontal"
                        android:layout_weight="1"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        app:srcCompat="@drawable/categoria_redonda_grande_detalles"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txt_categoria_detalles_anadir"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:hint="@string/categorias"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:paddingEnd="15dp"
                        android:paddingStart="5dp"
                        android:paddingTop="4dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/precio"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_precio_anadir_plato"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/caja_texto_redonda_categoria_detalles"
                    android:gravity="center_horizontal"
                    android:hint="1999,99 €"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
